# web-fundmental-fetcher

./: .gitignore  Makefile  README.md  SKILL.md  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-05-18-merge-xueqiu-fetcher.md  2026-05-18-stock-fundamental-fetcher.md
docs/superpowers/specs/: 2026-05-18-merge-xueqiu-fetcher-design.md  2026-05-18-stock-fundamental-fetcher-design.md
src/: cli.py  config.py  models.py  storage.py  xueqiu_exclude.py  zsxq_history.py
src/fetchers/: __init__.py  base.py  cninfo.py  eastmoney.py  quote.py  xueqiu.py  xueqiu_models.py  zsxq.py
src/utils/: date.py  http.py
tests/: test_cli.py  test_cninfo.py  test_config.py  test_date.py  test_eastmoney.py  test_fetcher_base.py  test_http.py  test_models.py  test_storage.py  test_zsxq.py
