[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "fundamental-fetcher"
version = "0.1.0"
description = "A-share stock fundamental text data fetcher"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "click>=8.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "toml>=0.10.2",
    "playwright>=1.50.0",
    "cloakbrowser>=0.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
